# OPEN-SOURCE-SEARCH-

./: .gitignore  README.md  main.py  pyproject.toml  test_lang.py  test_lang2.py
.github/workflows/: ci.yml
ai_backend/: llm_handler.py
core/: config.py
scripts/: complete.sh  complete.zsh
search_engines/: github_search.py
tests/: test_integration.py  test_translation.py
utils/: logger.py  translation.py
