[project]
name = "opensourcesearch"
version = "1.0.0"
description = "Search open-source projects across 9 platforms in any language"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "duckduckgo-search>=5.0.0",
    "deep_translator>=1.11.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ai = [
    "g4f>=0.3.0",
]

[project.scripts]
ops = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:This package.*renamed to `ddgs`:RuntimeWarning",
]

[tool.coverage.run]
source = ["core", "utils", "ai_backend", "search_engines", "main.py"]
omit = ["*/__pycache__/*"]
